Adding the 10 coming days forecast section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
             </div>
           </div>
         </article>
+        <article class="future__forecast">
+          <h3 class="text text--bold">Les 10 prochains jours</h3>
+        </article>
       </section>
       <footer class="footer"></footer>
     </main>
