Creating the basic structure of the forecast list

--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@
         </article>
         <article class="future__forecast">
           <h3 class="text text--bold">Les 10 prochains jours</h3>
+          <div class="forecast__list">
+            <div class="forecast__item">
+              <h5 class="text text--bold">Demain</h5>
+              <img
+                src="./assets/weather_icon.svg"
+                class="weather-icon weather-icon--md"
+              />
+              <span class="text text--bold">26ºC</span>
+              <span class="text text--bold">18ºC</span>
+            </div>
+          </div>
         </article>
       </section>
       <footer class="footer"></footer>
