Stylling up the weather icon to be the same throughout the app

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
           >
             Beni
           </p>
-          <img
-            src="assets/weather_icon.svg"
-            alt="Beni"
-            class="location__weather-icon"
-          />
+          <img src="assets/weather_icon.svg" alt="Beni" class="weather-icon" />
           <p
             class="location__weather-temp text text-heading text-heading--1 text--bold"
           >
@@ -51,7 +47,7 @@
               <img
                 src="assets/weather_icon.svg"
                 alt="Beni"
-                class="location__weather-icon"
+                class="weather-icon"
               />
               <p class="text text-regular--temp text--bold">10ºC</p>
             </div>
