Stylling up the forecast list and minor class names corrections

--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
             </div>
           </div>
         </article>
-        <article class="future__forecast">
-          <h3 class="text text--bold">Les 10 prochains jours</h3>
+        <article class="forecast">
+          <h3 class="forecast__title text text--bold">
+            Les 10 prochains jours
+          </h3>
           <div class="forecast__list">
             <div class="forecast__item">
               <h5 class="text text--bold">Demain</h5>
