--- a/index.html
+++ b/index.html
@@ -85,7 +85,16 @@
             Les 10 prochains jours
           </h3>
           <div class="forecast__list">
-            <div class="forecast__item">
+            <div class="forecast__list-item">
+              <h5 class="text text--bold">Demain</h5>
+              <img
+                src="./assets/weather_icon.svg"
+                class="weather-icon weather-icon--md"
+              />
+              <span class="text text--bold">26ºC</span>
+              <span class="text text--bold">18ºC</span>
+            </div>
+            <div class="forecast__list-item">
               <h5 class="text text--bold">Demain</h5>
               <img
                 src="./assets/weather_icon.svg"
