Stylling up the forecast item

--- a/index.html
+++ b/index.html
@@ -86,22 +86,31 @@
           </h3>
           <div class="forecast__list">
             <div class="forecast__list-item">
-              <h5 class="text text--bold">Demain</h5>
+              <h5 class="text text--bold dateTxt">Demain</h5>
               <img
                 src="./assets/weather_icon.svg"
-                class="weather-icon weather-icon--md"
+                class="weather-icon weather-icon--md weatherIcon"
               />
-              <span class="text text--bold">26ºC</span>
-              <span class="text text--bold">18ºC</span>
+              <span class="text text--bold upperTmp">26ºC</span>
+              <span class="text text--regular lowerTmp">18ºC</span>
             </div>
             <div class="forecast__list-item">
-              <h5 class="text text--bold">Demain</h5>
+              <h5 class="text text--bold dateTxt">Demain</h5>
               <img
                 src="./assets/weather_icon.svg"
-                class="weather-icon weather-icon--md"
+                class="weather-icon weather-icon--md weatherIcon"
               />
-              <span class="text text--bold">26ºC</span>
-              <span class="text text--bold">18ºC</span>
+              <span class="text text--bold upperTmp">26ºC</span>
+              <span class="text text--regular lowerTmp">18ºC</span>
+            </div>
+            <div class="forecast__list-item">
+              <h5 class="text text--bold dateTxt">Demain</h5>
+              <img
+                src="./assets/weather_icon.svg"
+                class="weather-icon weather-icon--md weatherIcon"
+              />
+              <span class="text text--bold upperTmp">26ºC</span>
+              <span class="text text--regular lowerTmp">18ºC</span>
             </div>
           </div>
         </article>
