Setting text rules for xl, lg, md, sm, xs: determining their sizes

--- a/index.html
+++ b/index.html
@@ -21,17 +21,9 @@
     <main class="main">
       <header class="header">
         <div class="location__weather">
-          <p
-            class="location__weather-place text text-heading text-heading--2 text--bold"
-          >
-            Beni
-          </p>
+          <p class="text text--lg text--bold">Beni</p>
           <img src="assets/weather_icon.svg" alt="Beni" class="weather-icon" />
-          <p
-            class="location__weather-temp text text-heading text-heading--1 text--bold"
-          >
-            10ºC
-          </p>
+          <p class="text text--xl text--bold">10ºC</p>
         </div>
       </header>
       <section class="section">
