--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
       <section class="section">
         <article class="weather__sumary">
           <div class="weather__sumary-header">
-            <p class="text text-regular text-regular--md text--bold">
-              Météo actuelle
-            </p>
-            <p class="text text-regular text-regular--sm">20h 30</p>
+            <p class="text text--sm text--bold">Météo actuelle</p>
+            <p class="text text--sm">20h 30</p>
           </div>
           <div class="weather__sumary-weather">
             <div class="weather__icon-temp">
@@ -41,34 +39,34 @@
                 alt="Beni"
                 class="weather-icon"
               />
-              <p class="text text-regular--temp text--bold">10ºC</p>
+              <p class="text text--xl text--bold">10ºC</p>
             </div>
-            <p class="text text-regular--sm">En partie nuageux</p>
+            <p class="text text--sm">En partie nuageux</p>
           </div>
           <div class="weather__sumary-details">
             <div class="weather__detail">
-              <p class="text text--regular detail-title">Qualité de l'air</p>
-              <p class="text text--regular text--bold detail-value">40</p>
+              <p class="text text--xs">Qualité de l'air</p>
+              <p class="text text--sm text--bold">40</p>
             </div>
             <div class="weather__detail">
-              <p class="text text--regular detail-title">Vent</p>
-              <p class="text text--regular text--bold detail-value">6 km/h</p>
+              <p class="text text--xs">Vent</p>
+              <p class="text text--sm text--bold">6 km/h</p>
             </div>
             <div class="weather__detail">
-              <p class="text text--regular detail-title">Humidité</p>
-              <p class="text text--regular text--bold detail-value">61%</p>
+              <p class="text text--xs">Humidité</p>
+              <p class="text text--sm text--bold">61%</p>
             </div>
             <div class="weather__detail">
-              <p class="text text--regular detail-title">Visibilité</p>
-              <p class="text text--regular text--bold detail-value">3 km</p>
+              <p class="text text--xs">Visibilité</p>
+              <p class="text text--sm text--bold">3 km</p>
             </div>
             <div class="weather__detail">
-              <p class="text text--regular detail-title">Rayonnement</p>
-              <p class="text text--regular text--bold detail-value">0</p>
+              <p class="text text--xs detail-title">Rayonnement</p>
+              <p class="text text--sm text--bold">0</p>
             </div>
             <div class="weather__detail">
-              <p class="text text--regular detail-title">Pression</p>
-              <p class="text text--regular text--bold detail-value">1011 mb</p>
+              <p class="text text--xs detail-title">Pression</p>
+              <p class="text text--sm text--bold">1011 mb</p>
             </div>
           </div>
         </article>
@@ -83,8 +81,8 @@
                 src="./assets/weather_icon.svg"
                 class="weather-icon weather-icon--md weatherIcon"
               />
-              <span class="text text--bold upperTmp">26ºC</span>
-              <span class="text text--regular lowerTmp">18ºC</span>
+              <span class="text text--sm text--bold upperTmp">26ºC</span>
+              <span class="text text--sm lowerTmp">18ºC</span>
             </div>
             <div class="forecast__list-item">
               <h5 class="text text--bold dateTxt">Demain</h5>
@@ -92,8 +90,8 @@
                 src="./assets/weather_icon.svg"
                 class="weather-icon weather-icon--md weatherIcon"
               />
-              <span class="text text--bold upperTmp">26ºC</span>
-              <span class="text text--regular lowerTmp">18ºC</span>
+              <span class="text text--sm text--bold upperTmp">26ºC</span>
+              <span class="text text--sm lowerTmp">18ºC</span>
             </div>
             <div class="forecast__list-item">
               <h5 class="text text--bold dateTxt">Demain</h5>
@@ -101,8 +99,8 @@
                 src="./assets/weather_icon.svg"
                 class="weather-icon weather-icon--md weatherIcon"
               />
-              <span class="text text--bold upperTmp">26ºC</span>
-              <span class="text text--regular lowerTmp">18ºC</span>
+              <span class="text text--sm text--bold upperTmp">26ºC</span>
+              <span class="text text--sm lowerTmp">18ºC</span>
             </div>
           </div>
         </article>
