Changing the font family of text in the header

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <main class="main">
       <header class="header">
         <div class="location__weather">
-          <p class="text text--lg text--bold">Beni</p>
+          <p class="text text--lg text--bold text--h">Beni</p>
           <img src="assets/weather_icon.svg" alt="Beni" class="weather-icon" />
-          <p class="text text--xl text--bold">10ºC</p>
+          <p class="text text--xl text--bold text--h">10ºC</p>
         </div>
       </header>
       <section class="section">
