Adding rules for thin, regular and blod texts. Plus updating the classes in the html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </h3>
           <div class="forecast__list">
             <div class="forecast__list-item">
-              <h5 class="text text--bold dateTxt">Demain</h5>
+              <h5 class="text text--regular dateTxt">Demain</h5>
               <img
                 src="./assets/weather_icon.svg"
                 class="weather-icon weather-icon--md weatherIcon"
@@ -85,7 +85,7 @@
               <span class="text text--sm lowerTmp">18ºC</span>
             </div>
             <div class="forecast__list-item">
-              <h5 class="text text--bold dateTxt">Demain</h5>
+              <h5 class="text text--regular dateTxt">Demain</h5>
               <img
                 src="./assets/weather_icon.svg"
                 class="weather-icon weather-icon--md weatherIcon"
@@ -94,7 +94,7 @@
               <span class="text text--sm lowerTmp">18ºC</span>
             </div>
             <div class="forecast__list-item">
-              <h5 class="text text--bold dateTxt">Demain</h5>
+              <h5 class="text text--regular dateTxt">Demain</h5>
               <img
                 src="./assets/weather_icon.svg"
                 class="weather-icon weather-icon--md weatherIcon"
