--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
     <main class="main">
       <header class="header">
         <div class="location__weather">
-          <p class="text text--lg text--bold text--h">Beni</p>
-          <img src="assets/weather_icon.svg" alt="Beni" class="weather-icon" />
-          <p class="text text--xl text--bold text--h">10ºC</p>
+          <p class="text text--lg text--bold text--h" id="place">Beni</p>
+          <img
+            src="assets/weather_icon.svg"
+            alt="Beni"
+            class="weather-icon"
+            id="conditionIcon"
+          />
+          <p class="text text--xl text--bold text--h" id="mainTemp">10ºC</p>
         </div>
       </header>
       <section class="section">
