Showing the temperature in the html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             class="weather-icon"
             id="conditionIcon"
           />
-          <p class="text text--xl text--bold text--h" id="mainTemp">10ºC</p>
+          <p class="text text--xl text--bold text--h current__temp-lbl">10ºC</p>
         </div>
       </header>
       <section class="section">
@@ -44,9 +44,9 @@
                 alt="Beni"
                 class="weather-icon"
               />
-              <p class="text text--xl text--bold">10ºC</p>
+              <p class="text text--xl text--bold current__temp-lbl">10ºC</p>
             </div>
-            <p class="text text--sm">En partie nuageux</p>
+            <p class="text text--sm" id="conditionLbl">En partie nuageux</p>
           </div>
           <div class="weather__sumary-details">
             <div class="weather__detail">
