--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           <img
             src="assets/weather_icon.svg"
             alt="Beni"
-            class="weather-icon"
-            id="conditionIcon"
+            class="weather-icon condition-icon"
           />
           <p class="text text--xl text--bold text--h current__temp-lbl">10ºC</p>
         </div>
@@ -42,7 +41,7 @@
               <img
                 src="assets/weather_icon.svg"
                 alt="Beni"
-                class="weather-icon"
+                class="weather-icon condition-icon"
               />
               <p class="text text--xl text--bold current__temp-lbl">10ºC</p>
             </div>
