Adding id to each weather details element

--- a/index.html
+++ b/index.html
@@ -50,27 +50,27 @@
           <div class="weather__sumary-details">
             <div class="weather__detail">
               <p class="text text--xs">Qualité de l'air</p>
-              <p class="text text--sm text--bold">40</p>
+              <p class="text text--sm text--bold" id="airQualityLbl">40</p>
             </div>
             <div class="weather__detail">
               <p class="text text--xs">Vent</p>
-              <p class="text text--sm text--bold">6 km/h</p>
+              <p class="text text--sm text--bold" id="windSpeedLbl">6 km/h</p>
             </div>
             <div class="weather__detail">
               <p class="text text--xs">Humidité</p>
-              <p class="text text--sm text--bold">61%</p>
+              <p class="text text--sm text--bold" id="humidityLbl">61%</p>
             </div>
             <div class="weather__detail">
               <p class="text text--xs">Visibilité</p>
-              <p class="text text--sm text--bold">3 km</p>
+              <p class="text text--sm text--bold" id="visibilityLbl">3 km</p>
             </div>
             <div class="weather__detail">
               <p class="text text--xs detail-title">Rayonnement</p>
-              <p class="text text--sm text--bold">0</p>
+              <p class="text text--sm text--bold" id="uvLbl">0</p>
             </div>
             <div class="weather__detail">
               <p class="text text--xs detail-title">Pression</p>
-              <p class="text text--sm text--bold">1011 mb</p>
+              <p class="text text--sm text--bold" id="pressionLbl">1011 mb</p>
             </div>
           </div>
         </article>
