Displaying the local time

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <article class="weather__sumary">
           <div class="weather__sumary-header">
             <p class="text text--sm text--bold">Météo actuelle</p>
-            <p class="text text--sm" id="localTime">20h 30</p>
+            <p class="text text--sm" id="localTimeLbl">20h 30</p>
           </div>
           <div class="weather__sumary-weather">
             <div class="weather__icon-temp">
